// Vitest Snapshot v1

exports[`basic > no apples | one apple  |  too much apples  1`] = `
{
  "body": {
    "cases": [
      {
        "end": 0,
        "items": [
          {
            "end": 9,
            "loc": {
              "end": {
                "column": 10,
                "line": 1,
                "offset": 9,
              },
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "start": 0,
            "type": 3,
            "value": "no apples",
          },
        ],
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 12,
        "items": [
          {
            "end": 21,
            "loc": {
              "end": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
              "start": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
            },
            "start": 12,
            "type": 3,
            "value": "one apple",
          },
        ],
        "loc": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 2,
      },
      {
        "end": 42,
        "items": [
          {
            "end": 42,
            "loc": {
              "end": {
                "column": 43,
                "line": 1,
                "offset": 42,
              },
              "start": {
                "column": 27,
                "line": 1,
                "offset": 26,
              },
            },
            "start": 26,
            "type": 3,
            "value": "too much apples ",
          },
        ],
        "loc": {
          "end": {
            "column": 43,
            "line": 1,
            "offset": 42,
          },
          "start": {
            "column": 27,
            "line": 1,
            "offset": 26,
          },
        },
        "start": 26,
        "type": 2,
      },
    ],
    "end": 42,
    "loc": {
      "end": {
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 42,
  "loc": {
    "end": {
      "column": 43,
      "line": 1,
      "offset": 42,
    },
    "source": "no apples | one apple  |  too much apples ",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`complex usage > @.lower:{'no apples'} | {1} apple | {count}　apples 1`] = `
{
  "body": {
    "cases": [
      {
        "end": 20,
        "items": [
          {
            "end": 21,
            "key": {
              "end": 21,
              "loc": {
                "end": {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
                "start": {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
              },
              "start": 8,
              "type": 9,
              "value": "no apples",
            },
            "loc": {
              "end": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "modifier": {
              "end": 7,
              "loc": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "start": 1,
              "type": 8,
              "value": "lower",
            },
            "start": 0,
            "type": 6,
          },
        ],
        "loc": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 27,
        "items": [
          {
            "end": 27,
            "index": 1,
            "loc": {
              "end": {
                "column": 28,
                "line": 1,
                "offset": 27,
              },
              "start": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
            },
            "start": 24,
            "type": 5,
          },
          {
            "end": 33,
            "loc": {
              "end": {
                "column": 34,
                "line": 1,
                "offset": 33,
              },
              "start": {
                "column": 28,
                "line": 1,
                "offset": 27,
              },
            },
            "start": 27,
            "type": 3,
            "value": " apple",
          },
        ],
        "loc": {
          "end": {
            "column": 34,
            "line": 1,
            "offset": 33,
          },
          "start": {
            "column": 25,
            "line": 1,
            "offset": 24,
          },
        },
        "start": 24,
        "type": 2,
      },
      {
        "end": 50,
        "items": [
          {
            "end": 43,
            "key": "count",
            "loc": {
              "end": {
                "column": 44,
                "line": 1,
                "offset": 43,
              },
              "start": {
                "column": 37,
                "line": 1,
                "offset": 36,
              },
            },
            "start": 36,
            "type": 4,
          },
          {
            "end": 50,
            "loc": {
              "end": {
                "column": 51,
                "line": 1,
                "offset": 50,
              },
              "start": {
                "column": 44,
                "line": 1,
                "offset": 43,
              },
            },
            "start": 43,
            "type": 3,
            "value": "　apples",
          },
        ],
        "loc": {
          "end": {
            "column": 51,
            "line": 1,
            "offset": 50,
          },
          "start": {
            "column": 37,
            "line": 1,
            "offset": 36,
          },
        },
        "start": 36,
        "type": 2,
      },
    ],
    "end": 50,
    "loc": {
      "end": {
        "column": 51,
        "line": 1,
        "offset": 50,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 50,
  "loc": {
    "end": {
      "column": 51,
      "line": 1,
      "offset": 50,
    },
    "source": "@.lower:{'no apples'} | {1} apple | {count}　apples",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`empty message >  | | | 1`] = `
{
  "body": {
    "cases": [
      {
        "end": 0,
        "items": [],
        "loc": {
          "end": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 0,
        "items": [],
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 2,
      },
      {
        "end": 3,
        "items": [],
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "start": 5,
        "type": 2,
      },
      {
        "end": 6,
        "items": [],
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 2,
      },
    ],
    "end": 6,
    "loc": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 6,
  "loc": {
    "end": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "source": " | | |",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`included new line > no apples |
 one apple  |
  too much apples   1`] = `
{
  "body": {
    "cases": [
      {
        "end": 0,
        "items": [
          {
            "end": 9,
            "loc": {
              "end": {
                "column": 10,
                "line": 1,
                "offset": 9,
              },
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "start": 0,
            "type": 3,
            "value": "no apples",
          },
        ],
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 13,
        "items": [
          {
            "end": 22,
            "loc": {
              "end": {
                "column": 11,
                "line": 2,
                "offset": 22,
              },
              "start": {
                "column": 2,
                "line": 2,
                "offset": 13,
              },
            },
            "start": 13,
            "type": 3,
            "value": "one apple",
          },
        ],
        "loc": {
          "end": {
            "column": 11,
            "line": 2,
            "offset": 22,
          },
          "start": {
            "column": 2,
            "line": 2,
            "offset": 13,
          },
        },
        "start": 13,
        "type": 2,
      },
      {
        "end": 45,
        "items": [
          {
            "end": 45,
            "loc": {
              "end": {
                "column": 20,
                "line": 3,
                "offset": 45,
              },
              "start": {
                "column": 3,
                "line": 3,
                "offset": 28,
              },
            },
            "start": 28,
            "type": 3,
            "value": "too much apples  ",
          },
        ],
        "loc": {
          "end": {
            "column": 20,
            "line": 3,
            "offset": 45,
          },
          "start": {
            "column": 3,
            "line": 3,
            "offset": 28,
          },
        },
        "start": 28,
        "type": 2,
      },
    ],
    "end": 45,
    "loc": {
      "end": {
        "column": 20,
        "line": 3,
        "offset": 45,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 45,
  "loc": {
    "end": {
      "column": 20,
      "line": 3,
      "offset": 45,
    },
    "source": "no apples |
 one apple  |
  too much apples  ",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`one empty message >  foo | | bar | buz 1`] = `
{
  "body": {
    "cases": [
      {
        "end": 0,
        "items": [
          {
            "end": 4,
            "loc": {
              "end": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "start": 0,
            "type": 3,
            "value": " foo",
          },
        ],
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 4,
        "items": [],
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "start": 7,
        "type": 2,
      },
      {
        "end": 9,
        "items": [
          {
            "end": 12,
            "loc": {
              "end": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
              "start": {
                "column": 10,
                "line": 1,
                "offset": 9,
              },
            },
            "start": 9,
            "type": 3,
            "value": "bar",
          },
        ],
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 2,
      },
      {
        "end": 18,
        "items": [
          {
            "end": 18,
            "loc": {
              "end": {
                "column": 19,
                "line": 1,
                "offset": 18,
              },
              "start": {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
            },
            "start": 15,
            "type": 3,
            "value": "buz",
          },
        ],
        "loc": {
          "end": {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
          "start": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "start": 15,
        "type": 2,
      },
    ],
    "end": 18,
    "loc": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 18,
  "loc": {
    "end": {
      "column": 19,
      "line": 1,
      "offset": 18,
    },
    "source": " foo | | bar | buz",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
